# gallery-DRF

./: .gitignore  Makefile  README.md  pyproject.toml
apps/: urls.py
apps/galleries/: admin.py  urls.py
apps/galleries/migrations/: 0001_initial.py  0002_category_gallery_created_at_gallery_updated_at_and_more.py  0002_initial.py  0002_usercategory.py  0003_alter_category_user.py  0003_alter_usercategory_unique_together.py  0004_alter_category_user.py  0004_alter_usercategory_unique_together.py  0005_gallery_author.py
apps/galleries/models/: __init__.py  category.py  gallery.py  user_category.py
apps/galleries/serializers/: category.py  gallery.py
apps/galleries/views/: category.py  gallery.py
apps/shared/django_restframework/: permission.py
apps/users/: admin.py  urls.py
apps/users/fixtures/: user.yaml
apps/users/migrations/: 0001_initial.py  0002_delete_usercategory.py  0002_remove_user_is_active_alter_user_first_name.py  0003_user_is_active_alter_user_is_superuser.py  0004_user_created_at_user_updated_at.py  0005_usercategory.py
apps/users/models/: __init__.py  addition.py  user.py
apps/users/serializers/: authorization.py  user.py
apps/users/tests/: conftest.py  test_user.py
apps/users/views/: user.py
apps/utils/: addtion.py  validatiors.py
root/: settings.py  urls.py  wsgi.py
